--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "start": "nodemon server.js",
     "start:prod": "set NODE_ENV=production&&nodemon server.js",
     "debug": "ndb server.js",
-    "watch:js":"parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundler.js",
-    "build:js":"parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundler.js"
+    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundler.js",
+    "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundler.js"
   },
   "author": "Saman",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
     "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.4",
@@ -26,10 +27,12 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "ndb": "^1.1.5",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
     "pug": "^2.0.4",
+    "sharp": "^0.25.3",
     "slugify": "^1.3.6",
     "validator": "^12.2.0",
     "xss-clean": "^0.1.1"
